Enable image align by class and update README, fixes #5

--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -87,3 +87,11 @@ a{
 #w2btoTop:active, #w2btoTop:focus {
     outline:none;
 }
+
+.basic-alignment {
+  &.left { float: left; margin-right: 1.5em; }
+  &.right { float: right; margin-left: 1.5em; }
+  &.center { display:block; margin: 0 auto 1.5em; }
+  &.left, &.right { margin-bottom: .8em; }
+}
+
